# test-repo

./: README.md  pyproject.toml  requirements.txt  s2tt-pako2vi-medium-v3.mix-v1.yaml
src/karbon_asr/: entities.py  transcribe.py
src/karbon_asr/training/: main.py  schemas.py  utlis.py  whisper_trainer.py
